[Authentication] Generate accessToken by creating system account
