# swagger/swagger.json
@@ -322,7 +322,7 @@
         }
       }
     },
-    "/eth/newAccount": {
+    "/eth/newAddress": {
       "post": {
         "summary": "Create new ethereum account",
         "description": "Create a new ethereum account\n",
@@ -335,7 +335,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/NewAccount"
+              "$ref": "#/definitions/NewAddress"
             }
           }
         ],
@@ -714,6 +714,36 @@
         }
       }
     },
+    "/account/create": {
+      "post": {
+        "summary": "Create new account and address",
+        "description": "Create new account and address\n",
+        "tags": [
+          "Account"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/NewAccount"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
     "/health": {
       "get": {
         "summary": "Blockchainbox service health check",
@@ -837,6 +867,17 @@
       }
     },
     "NewAccount": {
+      "type": "object",
+      "properties": {
+        "account": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
+    },
+    "NewAddress": {
       "type": "object",
       "properties": {
         "passphrase": {
